--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,9 +1,8 @@
 <% if logged_in? %>
   <%= "Hey #{current_user.name}!" %>
-<% end %>
-
-<% if logged_in? %>
-  <%= link_to(user_path) %>
+  <%= current_user.inspect %>
+  <%= link_to "Log Out", logout_path, method: :delete %>
+  <% link_to("Your page", user_path(current_user.id)) %>
 <% else %>
   <%= link_to('Login', new_session_path) %>
   <%= link_to('Sign up', new_user_path) %>
