Added a site icon, retitled Coding Concepts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CodingConceptsForBeginners</title>
+    <title>Coding Concepts</title>
     <%= csrf_meta_tags %>
+    <%= favicon_link_tag(source= "favicon.ico") %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
