--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+Member since: <%= @user.created_at.to_date %>
+ <%= @user.email %> <br>
 Welcome, <%=@user.name%>!
 <br>
-<%=@user.inspect%>
+<%=@user.user_readings%>
