minor db adjustments

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,4 +2,4 @@ Member since: <%= @user.created_at.to_date %>
  <%= @user.email %> <br>
 Welcome, <%=@user.name%>!
 <br>
-<%=@user.user_readings%>
+<%=@user.readings%>
